--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -1,3 +1,6 @@
+@use "../../styles/variables" as v;
+@use "../../styles/mixins" as m;
+
 .bookContainer {
 	padding: 0.5rem;
 	box-shadow: 2px 2px 8px 2px lightgray;
