--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 $primary-font: "Ariel", sans-serif;
 $primary-bg-color: #fff;
 $primary-text-color: #000;
+$primary-btn-color: #44599f;
+$primary-btn-text-color: #fff;
 $mobile-breakpoint: 800px;
