--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -2,13 +2,63 @@
 @use "../../styles/mixins" as m;
 
 .bookContainer {
-	padding: 0.5rem;
-	box-shadow: 2px 2px 8px 2px lightgray;
-	border-radius: 10px;
-	border: 1px solid lightgray;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
+}
+
+.imgContainer {
+	width: 250px;
+	height: 250px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #ddd5b6aa;
+	border-radius: 10px;
+	transition: 400ms;
+	cursor: pointer;
+
+	&:hover {
+		transform: scale(1.1);
+	}
+}
+
+.img {
+	max-width: calc(100% - 2rem);
+	height: calc(100% - 2rem);
+	box-shadow: 2px 2px 8px 0px #505050;
+}
+
+.contentContainer {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	padding: 1rem 0.5rem;
+	gap: 0.5rem;
+}
+
+.title {
+	font-size: larger;
+	margin: 0;
+	font-weight: bold;
+}
+
+.authors {
+	margin: 0;
+	font-weight: 500;
+	padding-bottom: 0.5rem;
+	font-weight: 600;
+	color: grey;
+}
+
+.description {
+	margin: 0;
+	font-weight: 500;
+}
+
+.expandButton {
+	border: none;
+	color: blue;
 	cursor: pointer;
 }
