--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -45,7 +45,7 @@
 			border-radius: 5px;
 			box-shadow: 0px 5px 5px #ccc;
 			font-size: 1rem;
-			background-color: rgb(68, 89, 159);
+			background-color: #44599f;
 			padding: 0.5rem 1rem;
 			cursor: pointer;
 		}
