--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -14,7 +14,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #ddd5b6aa;
+	background-color: v.$tile-color;
 	border-radius: 10px;
 	transition: 400ms;
 	cursor: pointer;
@@ -26,7 +26,9 @@
 
 .img {
 	max-width: calc(100% - 2rem);
-	height: calc(100% - 2rem);
+	max-height: calc(100% - 2rem);
+	height: max-content;
+	width: max-content;
 	box-shadow: 2px 2px 8px 0px #505050;
 }
 
