--- a/src/components/BookDetails/BookDetails.module.scss
+++ b/src/components/BookDetails/BookDetails.module.scss
@@ -1,2 +1,106 @@
 @use "../../styles/variables" as v;
 @use "../../styles/mixins" as m;
+
+.modalContent {
+	padding: 1rem 0;
+}
+
+.imgContainer {
+	width: 100%;
+	height: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+
+	@include m.mobile-media-query {
+		height: 200px;
+	}
+}
+
+.img {
+	max-width: calc(100% - 2rem);
+	max-height: calc(100% - 2rem);
+	height: 100%;
+	box-shadow: 2px 2px 8px 0px #505050;
+}
+
+.title {
+	padding-top: 2rem;
+	text-align: center;
+	font-size: 28px;
+	margin: 0;
+	font-weight: bold;
+
+	@include m.mobile-media-query {
+		font-size: 22px;
+		padding-top: 1rem;
+	}
+}
+
+.authors {
+	font-size: 20px;
+	padding-top: 0.5rem;
+	text-align: center;
+	margin: 0;
+	font-weight: 500;
+	padding-bottom: 0.5rem;
+	font-weight: 600;
+	color: grey;
+
+	@include m.mobile-media-query {
+		font-size: 18px;
+		padding-top: 0.5rem;
+	}
+}
+
+.publisher {
+	padding-top: 1rem;
+	text-align: center;
+	margin: 0;
+
+	@include m.mobile-media-query {
+		padding-top: 0.5rem;
+	}
+}
+
+.description {
+	padding: 1rem 0;
+	margin: 0;
+	font-weight: 600;
+	text-align: center;
+
+	@include m.mobile-media-query {
+		padding: 0.5rem 0;
+	}
+}
+
+.extraInfoContainer {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	padding: 1rem;
+	width: fit-content;
+	margin: 0 auto;
+
+	@include m.mobile-media-query {
+		flex-direction: column;
+		gap: 0.5rem;
+	}
+
+	&__content {
+		margin: 0;
+		text-transform: uppercase;
+		font-weight: 600;
+		letter-spacing: 0.1em;
+		text-align: center;
+
+		&:nth-child(2) {
+			@include m.mobile-media-query {
+				display: none;
+			}
+		}
+	}
+}
