--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,12 +19,20 @@
 	box-shadow: 0px 3px 15px #b1b1b1;
 	transition: 400ms ease-in-out;
 
+	@include m.mobile-media-query {
+			padding: 2rem 0 1rem 0;
+	}
+
 	&__full {
-		padding-top: 20%;
+		padding-top: 20rem;
 		background-color: v.$secondar-bg-color;
 		@include m.flex-center;
 		transition: 400ms ease-in-out;
 		height: 100%;
+
+		@include m.mobile-media-query {
+			padding-top: 5rem;
+		}
 	}
 }
 
@@ -36,6 +44,11 @@
 		font-size: 60px;
 		text-align: center;
 		color: white;
+		padding: 1rem;
+
+		@include m.mobile-media-query {
+			font-size: 40px;
+		}
 	}
 }
 
