Adds styling to pagination buttons

--- a/src/containers/BooksContainer/BooksContainer.module.scss
+++ b/src/containers/BooksContainer/BooksContainer.module.scss
@@ -2,7 +2,7 @@
 @use "../../styles/mixins" as m;
 
 .container {
-	padding: 3rem 2rem;
+	padding: 2rem;
 	display: grid;
 	justify-content: center;
 	grid-template-columns: repeat(auto-fill, 250px);
