--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@
 $heading-font: "Lilita One", sans-serif;
 $primary-font: "Outfit", sans-serif;
 $primary-bg-color: #fff;
-$secondar-bg-color: #006e61;
+$secondary-bg-color: #006e61;
 $primary-text-color: #000;
 $primary-btn-color: #cae062;
 $primary-btn-text-color: #000;
