--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -57,10 +57,15 @@
 .description {
 	margin: 0;
 	font-weight: 500;
+	margin-bottom: 0.3rem;
 }
 
-.expandButton {
+.btn {
 	border: none;
-	color: blue;
+	text-align: left;
+	margin: 0;
+	padding: 0;
 	cursor: pointer;
+	text-decoration: underline;
+	width: fit-content;
 }
